Adjusted banner, contrast and some content

--- a/health.html
+++ b/health.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="index.html">Urban <span>by TEMPLATED</span></a></div>
+				<div class="logo"><a href="index.html">PDG Health<span>&</span>Benefits</a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -23,8 +23,8 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="health.html">Health</a></li>
+					<li><a href="benefits.html">Benefits</a></li>
 				</ul>
 			</nav>
 
