--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">Urban <span>by TEMPLATED</span></a></div>
+				<div class="logo"><a href="index.html"><span>PDG</span> Health<span> & </span>Benefits</a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -32,8 +32,8 @@
 			<section id="banner">
 				<div class="inner">
 					<header>
-						<h1>This is Urban</h1>
-						<p>Aliquam libero augue varius non odio nec faucibus congue<br />felis quisque a diam rutrum tempus massa accumsan faucibus purus.</p>
+						<h1>PDG Health & Benefits</h1>
+						<p>Get to know all our amazing Health & Benefits deals we have to offer.<br />Join us and be part of this astonishing adventure.</p>
 					</header>
 					<a href="#main" class="button big scrolly">Learn More</a>
 				</div>
@@ -49,13 +49,13 @@
 								<div class="flex flex-2">
 									<div class="col col1">
 										<div class="image round fit">
-											<a href="generic.html" class="link"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="generic.html" class="link"><img src="images/colmedica.png" alt="" /></a>
 										</div>
 									</div>
 									<div class="col col2">
-										<h3>Maecenas a gravida quam</h3>
-										<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex.</p>
-										<p>Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex. </p>
+										<h3>Colmedica - Medicina Prepagada</h3>
+										<p>Prodigious ofrece Medicina Prepagada de Colmedica completamente gratis para todos sus empleados.</p>
+										<p>Colmedica cuenta con soluciones eficientes y oportunas, modernos canales de atención, consulta medica domiciliaria, acompañamiento permanente, orientacion medica por llamada o videollamada las 24 horas del dia.</p>
 										<a href="#" class="button">Learn More</a>
 									</div>
 								</div>
