Improved Content + Better Images

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="health.html">Health</a></li>
+					<li><a href="benefits.html">Benefits</a></li>
 				</ul>
 			</nav>
 
@@ -49,13 +49,12 @@
 								<div class="flex flex-2">
 									<div class="col col1">
 										<div class="image round fit">
-											<a href="generic.html" class="link"><img src="images/colmedica.png" alt="" /></a>
+											<a href="generic.html" class="link"><img src="images/health-wellness.jpg" alt="" /></a>
 										</div>
 									</div>
 									<div class="col col2">
-										<h3>Colmedica - Medicina Prepagada</h3>
-										<p>Prodigious ofrece Medicina Prepagada de Colmedica completamente gratis para todos sus empleados.</p>
-										<p>Colmedica cuenta con soluciones eficientes y oportunas, modernos canales de atención, consulta medica domiciliaria, acompañamiento permanente, orientacion medica por llamada o videollamada las 24 horas del dia.</p>
+										<h3>PDG Health</h3>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis quas neque beatae minima amet iure sed reprehenderit qui, corrupti at inventore dicta aliquam deserunt exercitationem explicabo nam quia iste? Fuga?</p>
 										<a href="#" class="button">Learn More</a>
 									</div>
 								</div>
@@ -67,14 +66,13 @@
 						<div class="inner">
 							<div class="flex flex-2">
 								<div class="col col2">
-									<h3>Suspendisse quis massa vel justo</h3>
+									<h3>PDG Benefits</h3>
 									<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex.</p>
-									<p>Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex. </p>
 									<a href="#" class="button">Learn More</a>
 								</div>
 								<div class="col col1 first">
 									<div class="image round fit">
-										<a href="generic.html" class="link"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="generic.html" class="link"><img src="images/benefits.png" alt="" /></a>
 									</div>
 								</div>
 							</div>
@@ -85,27 +83,27 @@
 					<section class="wrapper style1">
 						<div class="inner">
 							<header class="align-center">
-								<h2>Aliquam ipsum purus dolor</h2>
-								<p>Cras sagittis turpis sit amet est tempus, sit amet consectetur purus tincidunt.</p>
+								<h2>Conoce nuestros beneficios</h2>
 							</header>
 							<div class="flex flex-3">
 								<div class="col align-center">
 									<div class="image round fit">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/colmedica2.png" alt="" />
+									</div>
+									<p>Prodigious ofrece Medicina Prepagada de Colmedica completamente gratis para todos sus empleados.</p>
+									<p>Colmedica cuenta con soluciones eficientes y oportunas, modernos canales de atención, consulta medica domiciliaria, acompañamiento permanente, orientacion medica por llamada o videollamada las 24 horas del dia.</p>
+									<a href="#" class="button">Learn More</a>
+								</div>
+								<div class="col align-center">
+									<div class="image round fit">
+										<img src="images/colsubsidio2.jpg" alt="" />
 									</div>
 									<p>Sed congue elit malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet. </p>
 									<a href="#" class="button">Learn More</a>
 								</div>
 								<div class="col align-center">
 									<div class="image round fit">
-										<img src="images/pic05.jpg" alt="" />
-									</div>
-									<p>Sed congue elit malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet. </p>
-									<a href="#" class="button">Learn More</a>
-								</div>
-								<div class="col align-center">
-									<div class="image round fit">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/peoplepass.png" alt="" />
 									</div>
 									<p>Sed congue elit malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet. </p>
 									<a href="#" class="button">Learn More</a>
