Images + Benefits + Content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Urban by TEMPLATED</title>
+		<title>PDG Health & Benefits</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -49,13 +49,13 @@
 								<div class="flex flex-2">
 									<div class="col col1">
 										<div class="image round fit">
-											<a href="generic.html" class="link"><img src="images/health-wellness.jpg" alt="" /></a>
+											<a href="health.html" class="link"><img src="images/health-wellness.jpg" alt="Health & Wellness"/></a>
 										</div>
 									</div>
 									<div class="col col2">
 										<h3>PDG Health</h3>
 										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis quas neque beatae minima amet iure sed reprehenderit qui, corrupti at inventore dicta aliquam deserunt exercitationem explicabo nam quia iste? Fuga?</p>
-										<a href="#" class="button">Learn More</a>
+										<a href="health.html" class="button">Learn More</a>
 									</div>
 								</div>
 						</div>
@@ -68,18 +68,18 @@
 								<div class="col col2">
 									<h3>PDG Benefits</h3>
 									<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex.</p>
-									<a href="#" class="button">Learn More</a>
+									<a href="benefits.html" class="button">Learn More</a>
 								</div>
 								<div class="col col1 first">
 									<div class="image round fit">
-										<a href="generic.html" class="link"><img src="images/benefits.png" alt="" /></a>
+										<a href="benefits.html" class="link"><img src="images/benefits.png" alt="Benefits" /></a>
 									</div>
 								</div>
 							</div>
 						</div>
 					</section>
 
-				<!-- Section -->
+					<!-- Section -->
 					<section class="wrapper style1">
 						<div class="inner">
 							<header class="align-center">
@@ -88,42 +88,40 @@
 							<div class="flex flex-3">
 								<div class="col align-center">
 									<div class="image round fit">
-										<img src="images/colmedica2.png" alt="" />
+										<img src="images/colmedica2.png" alt="Logo Colmedica" />
 									</div>
 									<p>Prodigious ofrece Medicina Prepagada de Colmedica completamente gratis para todos sus empleados.</p>
 									<p>Colmedica cuenta con soluciones eficientes y oportunas, modernos canales de atención, consulta medica domiciliaria, acompañamiento permanente, orientacion medica por llamada o videollamada las 24 horas del dia.</p>
-									<a href="#" class="button">Learn More</a>
+									<a href="health.html" class="button">Learn More</a>
 								</div>
 								<div class="col align-center">
 									<div class="image round fit">
-										<img src="images/colsubsidio2.jpg" alt="" />
+										<img src="images/colsubsidio2.jpg" alt="Logo Colsubsidio" />
 									</div>
 									<p>Sed congue elit malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet. </p>
-									<a href="#" class="button">Learn More</a>
+									<a href="health.html" class="button">Learn More</a>
 								</div>
 								<div class="col align-center">
 									<div class="image round fit">
-										<img src="images/peoplepass.png" alt="" />
+										<img src="images/peoplepass.png" alt="Logo PeoplePass" />
 									</div>
 									<p>Sed congue elit malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet. </p>
-									<a href="#" class="button">Learn More</a>
+									<a href="benefits.html" class="button">Learn More</a>
 								</div>
 							</div>
 						</div>
 					</section>
-
 			</div>
 
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="copyright">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
+						<li><a href="https://co.linkedin.com/company/prodigious-latin-america" class="icon fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://es-la.facebook.com/ProdigiousLATAM/" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/prodigious_latam/?hl=es-la" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 					</ul>
-					<p>&copy; Untitled. All rights reserved. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.</p>
+					<p>&copy; PDG Health & Benefits. All rights reserved. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.</p>
 				</div>
 			</footer>
 
