--- a/benefits.html
+++ b/benefits.html
@@ -35,19 +35,19 @@
 					<section class="wrapper">
 						<div class="inner">
 							<header class="align-center">
-								<h1>PDG Health</h1>
-								<p>Conoce los beneficios de salud que ofrece Prodigious.</p>
+								<h1>PDG Benefits</h1>
+								<p>Conoce los beneficios que ofrece Prodigious.</p>
 							</header>
 							<div class="flex flex-2">
-								<div class="col col2">
-									<h3>Siempre nos preocupamos por tu salud fisica & mental</h3>
-									<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex.</p>
-									<p>Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex. Sed sollicitudin bibendum ultricies. Vivamus tristique justo lacinia dui tempus consequat. Integer tristique eu nisi nec fermentum. Ut malesuada quis massa at ultricies. Donec gravida ipsum in augue volutpat laoreet. Ut lobortis turpis sit amet sodales ultrices.</p>
-								</div>
 								<div class="col col1 first">
 									<div class="image round fit">
-										<a href="generic.html" class="link"><img src="images/yoga.jpg" alt="Imagen Yoga" /></a>
+										<a href="generic.html" class="link"><img src="images/pic02.jpg" alt="" /></a>
 									</div>
+								</div>
+								<div class="col col2">
+									<h3>Benificios pensados especial para ti</h3>
+									<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex.</p>
+									<p>Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex. Sed sollicitudin bibendum ultricies. Vivamus tristique justo lacinia dui tempus consequat. Integer tristique eu nisi nec fermentum. Ut malesuada quis massa at ultricies. Donec gravida ipsum in augue volutpat laoreet. Ut lobortis turpis sit amet sodales ultrices.</p>
 								</div>
 							</div>
 							<p>Curabitur venenatis lorem ut finibus finibus. Ut quis eleifend libero, nec ultricies metus. Morbi magna risus, congue sit amet pellentesque eget, malesuada ut justo. Sed ac pretium quam. Ut vel ex vitae enim sagittis posuere ac id erat. Vestibulum vel ullamcorper tellus. Donec sapien massa, venenatis ac felis vel, vestibulum sagittis enim. Maecenas ut egestas lorem, nec luctus ligula. Vestibulum neque diam, aliquet non enim a, cursus lacinia metus. Aenean fringilla luctus rhoncus. Integer vulputate massa ac suscipit venenatis. Integer luctus elit non nulla fringilla, ullamcorper maximus sem congue. Integer tristique eu nisi nec fermentum. Ut malesuada quis massa at ultricies.</p>
@@ -59,30 +59,30 @@
 					<section class="wrapper style1">
 						<div class="inner">
 							<header class="align-center">
-								<h2>Nuestros servicios de Salud</h2>
+								<h2>Conoce Nuestros Beneficios</h2>
 								<p>Cras sagittis turpis sit amet est tempus, sit amet consectetur purus tincidunt.</p>
 							</header>
 							<div class="flex flex-3">
 								<div class="col align-center">
 									<div class="image round fit">
-										<img src="images/colmedica2.png" alt="Logo Colmedica" />
+										<img src="images/peoplepass.png" alt="Imagen People Pass" />
 									</div>
 									<p>Sed congue elit malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet. </p>
-									<a href="#" class="button">Colmédica</a>
+									<a href="#" class="button">PeoplePass</a>
 								</div>
 								<div class="col align-center">
 									<div class="image round fit">
-										<img src="images/bbc.jpeg" alt="Logo BBC" />
+										<img src="images/bono.jpeg" alt="Imagen Bono Referidos" />
 									</div>
 									<p>Sed congue elit malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet. </p>
-									<a href="#" class="button">BBC</a>
+									<a href="#" class="button">Bono Referidos</a>
 								</div>
 								<div class="col align-center">
 									<div class="image round fit">
-										<img src="images/bodytech.jpg" alt="Logo Body-Tech" />
+										<img src="images/social.png" alt="Actividades Sociales" />
 									</div>
 									<p>Sed congue elit malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet. </p>
-									<a href="#" class="button">Convenio Body-Tech</a>
+									<a href="#" class="button">Actividades Sociales</a>
 								</div>
 							</div>
 						</div>
