--- a/benefits.html
+++ b/benefits.html
@@ -41,7 +41,7 @@
 							<div class="flex flex-2">
 								<div class="col col1 first">
 									<div class="image round fit">
-										<a href="generic.html" class="link"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="link"><img src="images/pic02.jpg" alt="" /></a>
 									</div>
 								</div>
 								<div class="col col2">
