--- a/health.html
+++ b/health.html
@@ -46,7 +46,7 @@
 								</div>
 								<div class="col col1 first">
 									<div class="image round fit">
-										<a href="generic.html" class="link"><img src="images/yoga.jpg" alt="Imagen Yoga" /></a>
+										<a href="#" class="link"><img src="images/yoga.jpg" alt="Imagen Yoga" /></a>
 									</div>
 								</div>
 							</div>
